tests/expectations/compiler/array/array_write_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372000]: invalid assignment target
    --> compiler-test:5:9
     |
   5 |         a[0u32] = false;
     |         ^^^^^^^
Error [ETYC0372000]: invalid assignment target
    --> compiler-test:6:9
     |
   6 |         a[1u32] = true;
     |         ^^^^^^^
"""]
